[package]
name = "study-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio-rustls = "0.24"
tokio-native-tls = "0.3"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
rcgen = "0.11"
chrono = "0.4"
bytes = "1.0"
futures = "0.3"
regex = "1.0"
